--- a/config_files/debarcer.conf
+++ b/config_files/debarcer.conf
@@ -1,2 +1,5 @@
 # Default debarcer config file
 plexity	13
+
+# Customization options
+# ampliconTable /absolute_path_to/amplicon_tables/all_amplicons.txt
