Preliminary report building, refactoring

--- a/config/haloplex_config.ini
+++ b/config/haloplex_config.ini
@@ -3,9 +3,18 @@ reference_file=/oicr/data/genomes/homo_sapiens_mc/UCSC/hg19/Genomic/bwa/0.7.12/h
 routine_file=/.mounts/labs/gsiprojects/gsi/Debarcer2/data/haloplex-hs/testdata/aligned/debarcer/routines/haloplex_routine.py
 output_folder=/.mounts/labs/gsiprojects/gsi/Debarcer2/data/haloplex-hs/testdata/aligned/debarcer/data
 
+[RUN]
+skip_count=0
+skip_cons=0
+skip_report=0
+
 [SETTINGS]
 min_family_size=3
 max_family_size=50
 percent_consensus_threshold=70.0
 count_consensus_threshold=3
+
+[REPORT]
+percent_ref_threshold=95.0
+
 
