Added output modules + refactoring

--- a/config/haloplex_config.ini
+++ b/config/haloplex_config.ini
@@ -1,12 +1,12 @@
 [PATHS]
 reference_file=/oicr/data/genomes/homo_sapiens_mc/UCSC/hg19/Genomic/bwa/0.7.12/hg19.fa
-routine_file=/.mounts/labs/gsiprojects/gsi/Debarcer2/data/haloplex-hs/testdata/aligned/debarcer/routines/haloplex_routine.py
+routine_file=/.mounts/labs/gsiprojects/gsi/Debarcer2/data/haloplex-hs/testdata/aligned/debarcer/src/routines/haloplex_routine.py
 output_folder=/.mounts/labs/gsiprojects/gsi/Debarcer2/data/haloplex-hs/testdata/aligned/debarcer/data
 
 [RUN]
-skip_count=0
-skip_cons=0
-skip_report=0
+run_count=TRUE
+run_cons=TRUE
+run_report=TRUE
 
 [SETTINGS]
 min_family_size=3
@@ -15,6 +15,10 @@ percent_consensus_threshold=70.0
 count_consensus_threshold=3
 
 [REPORT]
+run_variants=TRUE
 percent_ref_threshold=95.0
+run_coverage=TRUE
+run_plots=FALSE
+
 
 
