Tables, argument flags & error handling

--- a/config/haloplex_config.ini
+++ b/config/haloplex_config.ini
@@ -1,7 +1,9 @@
 [PATHS]
+bam_file=/.mounts/labs/gsiprojects/gsi/Debarcer2/data/haloplex-hs/testdata/aligned/RDM_0002_Pb_P_PE_350_TS.merged.sorted.bam
+bed_file=/.mounts/labs/gsiprojects/gsi/Debarcer2/data/haloplex-hs/design/00100-1421280602_Amplicons.bed
 reference_file=/oicr/data/genomes/homo_sapiens_mc/UCSC/hg19/Genomic/bwa/0.7.12/hg19.fa
-routine_file=/.mounts/labs/gsiprojects/gsi/Debarcer2/data/haloplex-hs/testdata/aligned/debarcer/src/routines/haloplex_routine.py
-output_folder=/.mounts/labs/gsiprojects/gsi/Debarcer2/data/haloplex-hs/testdata/aligned/debarcer/data
+routine_file=/.mounts/labs/gsiprojects/gsi/Debarcer2/data/haloplex-hs/testdata/aligned/debarcer2/src/routines/haloplex_routine.py
+output_path=/.mounts/labs/gsiprojects/gsi/Debarcer2/data/haloplex-hs/testdata/aligned/debarcer2/data
 
 [RUN]
 run_count=TRUE
