Added reheader script + tests

--- a/config/library_prep_types.ini
+++ b/config/library_prep_types.ini
@@ -3,24 +3,24 @@
 ; OUTPUT_READS: Number of reheadered read files (1-2)
 ; UMI_LOCS: Comma-separated indices of reads with a UMI (1-3)
 ; UMI_LENS: Comma-separated lengths of the UMIs (1-100)
-; SPACER: True if a spacer is used (T/F)
+; SPACER: True if a spacer is used (TRUE/FALSE)
 ; SPACER_SEQ: Base sequence of the spacer ([A,C,G,T]+)
 
+; Expected order: R1, R2 = UMI, R3
 [HALOPLEX]
 INPUT_READS=3
 OUTPUT_READS=2
 UMI_LOCS=2
 UMI_LENS=10
 SPACER=FALSE
-SPACER_SEQ=FALSE
 
+; Expected order: R1, R2 = UMI, R3
 [SURESELECT]
 INPUT_READS=3
 OUTPUT_READS=2
 UMI_LOCS=2
 UMI_LENS=10
 SPACER=FALSE
-SPACER_SEQ=FALSE
 
 [EPIC-DS]
 INPUT_READS=2
@@ -29,3 +29,19 @@ UMI_LOCS=1,2
 UMI_LENS=12,12
 SPACER=TRUE
 SPACER_SEQ=TGACT
+
+[SIMSENSEQ-PE]
+INPUT_READS=2
+OUTPUT_READS=2
+UMI_LOCS=1
+UMI_LENS=12
+SPACER=TRUE
+SPACER_SEQ=ATGGGAAAGAGTGTCC
+
+[SIMSENSEQ-SE]
+INPUT_READS=1
+OUTPUT_READS=1
+UMI_LOCS=1
+UMI_LENS=12
+SPACER=TRUE
+SPACER_SEQ=ATGGGAAAGAGTGTCC
