Fixes + error handling

--- a/config/sample_config.ini
+++ b/config/sample_config.ini
@@ -20,6 +20,6 @@ run_variants=TRUE
 percent_ref_threshold=95.0
 run_coverage=TRUE
 run_plots=FALSE
-keep_missing_pos=TRUE
+keep_missing_pos=FALSE
 
 
