Major revisions to variant calling

--- a/config/sample_config.ini
+++ b/config/sample_config.ini
@@ -10,7 +10,7 @@ run_cons=TRUE
 run_report=TRUE
 
 [SETTINGS]
-min_family_sizes=1,2,3,5,10,20
+min_family_sizes=1,2,5
 max_family_size=50
 percent_consensus_threshold=50.0
 count_consensus_threshold=1
@@ -18,8 +18,9 @@ count_consensus_threshold=1
 [REPORT]
 run_variants=TRUE
 percent_ref_threshold=95.0
+percent_allele_threshold=2.0
 run_coverage=TRUE
 run_plots=FALSE
-keep_missing_pos=FALSE
+
 
 
