--- a/config/sample_config.ini
+++ b/config/sample_config.ini
@@ -14,6 +14,8 @@ min_family_sizes=1,2,5
 max_family_size=50
 percent_consensus_threshold=50.0
 count_consensus_threshold=1
+umi_edit_distance_threshold=1
+umi_family_pos_threshold=10
 
 [REPORT]
 run_variants=TRUE
