Fix for issue #93: Error executing args.func(args) in debarcer.py

--- a/config/library_prep_types.ini
+++ b/config/library_prep_types.ini
@@ -13,6 +13,7 @@ OUTPUT_READS=2
 UMI_LOCS=2
 UMI_LENS=10
 SPACER=FALSE
+SPACER_SEQ=None
 
 ; Expected order: R1, R2 = UMI, R3
 [SURESELECT]
@@ -21,6 +22,7 @@ OUTPUT_READS=2
 UMI_LOCS=2
 UMI_LENS=10
 SPACER=FALSE
+SPACER_SEQ=None
 
 [EPIC-DS]
 INPUT_READS=2
