Implemented path error checking

--- a/config/demo_config.ini
+++ b/config/demo_config.ini
@@ -1,5 +1,5 @@
 [PATHS]
-bam_file=/oicr/local/analysis/src/bwa/bwa-0.7.12/bwa
+bam_file=
 reference_file=/oicr/data/genomes/homo_sapiens_mc/UCSC/hg19_random/Genomic/bwa/0.7.12/hg19_random.fa
 output_path=/u/iwarikoo/Debarcer2/d_output/
 prep_file=/u/iwarikoo/Debarcer2/debarcer/config/library_prep_types.ini
