edit output_dir --> outdir

--- a/config/sample_config.ini
+++ b/config/sample_config.ini
@@ -2,7 +2,7 @@
 [PATHS]
 bam_file=/some/path/
 reference_file=/some/path/
-output_dir=/some/path/
+outdir=/some/path/
 prep_file=/some/path/
 
 [SETTINGS]
