--- a/config/library_prep_types.ini
+++ b/config/library_prep_types.ini
@@ -2,9 +2,13 @@
 ; INPUT_READS: Starting number of read files (1-3)
 ; OUTPUT_READS: Number of reheadered read files (1-2)
 ; UMI_LOCS: Comma-separated indices of reads with a UMI (1-3)
-; UMI_LENS: Comma-separated lengths of the UMIs (1-100)
+; UMI_LENS: Comma-separated lengths of the UMIs (1-3)
 ; SPACER: True if a spacer is used (TRUE/FALSE)
 ; SPACER_SEQ: Base sequence of the spacer ([A,C,G,T]+)
+; UMI_POS: comma-separated Left-most position of the umi within read (1-based):
+;          ie ith position of read of length n. (1 to n - UMI_LENS - len(SPACER_SEQ))
+;          if a single value, UMI_POS is propagated to all fastqs having umis
+;          if comma-separated, umis must be listed in same order for UMI_POS and UMI_LENS
 
 ; Expected order: R1, R2 = UMI, R3
 [HALOPLEX]
@@ -14,6 +18,7 @@ UMI_LOCS=2
 UMI_LENS=10
 SPACER=FALSE
 SPACER_SEQ=None
+UMI_POS=1
 
 ; Expected order: R1, R2 = UMI, R3
 [SURESELECT]
@@ -23,6 +28,7 @@ UMI_LOCS=2
 UMI_LENS=10
 SPACER=FALSE
 SPACER_SEQ=None
+UMI_POS=1
 
 [EPIC-DS]
 INPUT_READS=2
@@ -31,6 +37,7 @@ UMI_LOCS=1,2
 UMI_LENS=12,12
 SPACER=TRUE
 SPACER_SEQ=TGACT
+UMI_POS=1
 
 [SIMSENSEQ-PE]
 INPUT_READS=2
@@ -39,6 +46,7 @@ UMI_LOCS=1
 UMI_LENS=12
 SPACER=TRUE
 SPACER_SEQ=ATGGGAAAGAGTGTCC
+UMI_POS=1
 
 [SIMSENSEQ-SE]
 INPUT_READS=1
@@ -47,3 +55,4 @@ UMI_LOCS=1
 UMI_LENS=12
 SPACER=TRUE
 SPACER_SEQ=ATGGGAAAGAGTGTCC
+UMI_POS=1
