allow custom library preps

--- a/config/library_prep_types.ini
+++ b/config/library_prep_types.ini
@@ -56,3 +56,31 @@ UMI_LENS=12
 SPACER=TRUE
 SPACER_SEQ=ATGGGAAAGAGTGTCC
 UMI_POS=1
+
+[CUSTOM]
+# enter the number of input fastqs
+INPUT_READS=0
+# enter the number of output reheadered fastqs
+OUTPUT_READS=0
+# enter the location of the fastqs with umi.  
+# a single value or comma-separated list
+# if single value, propagated to all fastqs
+UMI_LOCS=0
+# enter the length of the umis for each input fastq with umis
+# a single value or comma-separated list
+# if single value, propagated to all fastqs
+UMI_LENS=0
+# specify whether a spacer is present in each input fastq with umis
+# a single value or comma-separated list
+# if single value, propagated to all fastqs
+SPACER=0
+# enter the spacer sequences, use '' when no spacer is present (SPACER=False)
+# a single value or comma-separated list
+# if single value and SPACER=True, propagated to all fastqs
+SPACER_SEQ=0
+# enter the position 1-based of the umi in read
+# a single value or comma-separated list
+# if single value, propagated to all fastqs with umis
+UMI_POS=0
+
+
