--- a/config/library_prep_types.ini
+++ b/config/library_prep_types.ini
@@ -1,16 +1,37 @@
 
-; INPUT_READS: Starting number of read files (1-3)
-; OUTPUT_READS: Number of reheadered read files (1-2)
-; UMI_LOCS: Comma-separated indices of reads with a UMI (1-3)
-; UMI_LENS: Comma-separated lengths of the UMIs (1-3)
-; SPACER: True if a spacer is used (TRUE/FALSE)
-; SPACER_SEQ: Base sequence of the spacer ([A,C,G,T]+)
-; UMI_POS: comma-separated Left-most position of the umi within read (1-based):
-;          ie ith position of read of length n. (1 to n - UMI_LENS - len(SPACER_SEQ))
-;          if a single value, UMI_POS is propagated to all fastqs having umis
-;          if comma-separated, umis must be listed in same order for UMI_POS and UMI_LENS
+##################### description of parameters ################################
+#                                                                              #  
+#   INPUT_READS: Starting number of read files (1-3)                           #
+#                                                                              #
+#   OUTPUT_READS: Number of reheadered read files (1-2)                        #
+#                                                                              #
+#   UMI_LOCS: Indices of reads with a UMI (1-3)                                #
+#             Single value or comma-separated                                  #
+#                                                                              #
+#   UMI_LENS: Lengths of the UMIs (1-3)                                        #
+#             Single value or comma-separated                                  #
+#                                                                              #
+#   SPACER: True if a spacer is used (TRUE/FALSE)                              #
+#                                                                              #
+#   SPACER_SEQ: Sequence of the spacer ([A,C,G,T]+)                            #
+#                                                                              #
+#   UMI_POS: Left-most position of the umi within read (1-based)               #
+#            ie ith position of read of length n                               #
+#            (1 to n - UMI_LENS - len(SPACER_SEQ))                             #
+#            Single value or comma-separated                                   #
+#                                                                              #
+#   Single-value of parameters UMI_LENS, UMI_POS, SPACER, SPACER_SEQ           #
+#   are propagated to all fastqs with umis.                                    #
+#   However, for comma-separated values, info must be listed in the same order #
+#   as UMI_LOCS, and the number of values must match that of UMI_LOCS          #
+#                                                                              #
+#   Multiple spacers are not allowed. It is assumed that the same spacer       #
+#   is used for all input fastqs with umis if spacer if present.               #
+#    Use empty string or None to specify SPACER_SEQ when SPACER=False           #                                               #
+#                                                                              #
+################################################################################
 
-; Expected order: R1, R2 = UMI, R3
+# Expected order: R1, R2 = UMI, R3
 [HALOPLEX]
 INPUT_READS=3
 OUTPUT_READS=2
@@ -20,7 +41,7 @@ SPACER=FALSE
 SPACER_SEQ=None
 UMI_POS=1
 
-; Expected order: R1, R2 = UMI, R3
+# Expected order: R1, R2 = UMI, R3
 [SURESELECT]
 INPUT_READS=3
 OUTPUT_READS=2
@@ -34,7 +55,7 @@ UMI_POS=1
 INPUT_READS=2
 OUTPUT_READS=2
 UMI_LOCS=1,2
-UMI_LENS=12,12
+UMI_LENS=12
 SPACER=TRUE
 SPACER_SEQ=TGACT
 UMI_POS=1
@@ -64,23 +85,16 @@ INPUT_READS=0
 OUTPUT_READS=0
 # enter the location of the fastqs with umi.  
 # a single value or comma-separated list
-# if single value, propagated to all fastqs
 UMI_LOCS=0
 # enter the length of the umis for each input fastq with umis
 # a single value or comma-separated list
-# if single value, propagated to all fastqs
 UMI_LENS=0
 # specify whether a spacer is present in each input fastq with umis
-# a single value or comma-separated list
-# if single value, propagated to all fastqs
 SPACER=0
-# enter the spacer sequences, use '' when no spacer is present (SPACER=False)
-# a single value or comma-separated list
-# if single value and SPACER=True, propagated to all fastqs
+# enter the spacer sequence, use '' or None when no spacer is present (SPACER=False)
 SPACER_SEQ=0
 # enter the position 1-based of the umi in read
 # a single value or comma-separated list
-# if single value, propagated to all fastqs with umis
 UMI_POS=0
 
 
