--- a/config/library_prep_types.ini
+++ b/config/library_prep_types.ini
@@ -20,14 +20,14 @@
 #            (1 to n - UMI_LENS - len(SPACER_SEQ))                             #
 #            Single value or comma-separated                                   #
 #                                                                              #
-#   Single-value of parameters UMI_LENS, UMI_POS, SPACER, SPACER_SEQ           #
-#   are propagated to all fastqs with umis.                                    #
-#   However, for comma-separated values, info must be listed in the same order #
-#   as UMI_LOCS, and the number of values must match that of UMI_LOCS          #
+#   Single-value of parameters UMI_LENS, UMI_POS are propagated to all fastqs  #
+#   with umis. However, for comma-separated values, info must be listed in     #
+#   the same order as UMI_LOCS, and the number of values must match that       #
+#   of UMI_LOCS                                                                #
 #                                                                              #
 #   Multiple spacers are not allowed. It is assumed that the same spacer       #
 #   is used for all input fastqs with umis if spacer if present.               #
-#    Use empty string or None to specify SPACER_SEQ when SPACER=False           #                                               #
+#    Use empty string or None to specify SPACER_SEQ when SPACER=False          #                                               #
 #                                                                              #
 ################################################################################
 
