use frequencies <= 0  and >= 1 for thresholds

--- a/config/demo_config.ini
+++ b/config/demo_config.ini
@@ -6,13 +6,13 @@ prep_file=/u/iwarikoo/Debarcer2/debarcer/config/library_prep_types.ini
 
 [SETTINGS]
 min_family_sizes=1,2,5
-percent_consensus_threshold=50.0
+consensus_threshold=0.5
 count_consensus_threshold=1
 umi_edit_distance_threshold=1
 umi_family_pos_threshold=10
 
 [REPORT]
-percent_ref_threshold=95.0
-percent_allele_threshold=2.0
+ref_threshold=0.95
+allele_threshold=0.02
 filter_threshold=10
 
