use frequency in %

--- a/config/sample_config.ini
+++ b/config/sample_config.ini
@@ -7,14 +7,14 @@ prep_file=/some/path/
 
 [SETTINGS]
 min_family_sizes=1,2,5
-consensus_threshold=0.5
+percent_consensus_threshold=50
 count_consensus_threshold=1
 umi_edit_distance_threshold=1
 umi_family_pos_threshold=10
 
 [REPORT]
-ref_threshold=0.95
-allele_threshold=0.02
+percent_ref_threshold=95
+percent_allele_threshold=2
 filter_threshold=10
 
 
