changed variable names

--- a/config/demo_config.ini
+++ b/config/demo_config.ini
@@ -13,6 +13,6 @@ umi_family_pos_threshold=10
 
 [REPORT]
 percent_ref_threshold=95
-percent_allele_threshold=2
+percent_alt_threshold=2
 filter_threshold=10
 
