edited parameter description

--- a/config/library_prep_types.ini
+++ b/config/library_prep_types.ini
@@ -8,7 +8,7 @@
 #   UMI_LOCS: Indices of reads with a UMI (1-3)                                #
 #             Single value or comma-separated                                  #
 #                                                                              #
-#   UMI_LENS: Lengths of the UMIs (1-3)                                        #
+#   UMI_LENS: Lengths of the UMIs in each fastq with umi                       #
 #             Single value or comma-separated                                  #
 #                                                                              #
 #   SPACER: True if a spacer is used (TRUE/FALSE)                              #
