explicitly declare if umis are inline with reads. #176

--- a/config/library_prep_types.ini
+++ b/config/library_prep_types.ini
@@ -19,6 +19,10 @@
 #            ie ith position of read of length n                               #
 #            (1 to n - UMI_LENS - len(SPACER_SEQ))                             #
 #            Single value or comma-separated                                   #
+#                                                                              #   
+#    UMI_INLINE: True id umis are inline with reads                            #
+#                False if umis are in separate input fastq                     #
+#                                                                              # 
 #                                                                              #
 #   Single-value of parameters UMI_LENS, UMI_POS are propagated to all fastqs  #
 #   with umis. However, for comma-separated values, info must be listed in     #
@@ -40,6 +44,7 @@ UMI_LENS=10
 SPACER=FALSE
 SPACER_SEQ=None
 UMI_POS=1
+UMI_INLINE=FALSE
 
 # Expected order: R1, R2 = UMI, R3
 [SURESELECT]
@@ -50,6 +55,7 @@ UMI_LENS=10
 SPACER=FALSE
 SPACER_SEQ=None
 UMI_POS=1
+UMI_INLINE=FALSE
 
 [EPIC-DS]
 INPUT_READS=2
@@ -59,6 +65,7 @@ UMI_LENS=12
 SPACER=TRUE
 SPACER_SEQ=TGACT
 UMI_POS=1
+UMI_INLINE=TRUE
 
 [SIMSENSEQ-PE]
 INPUT_READS=2
@@ -68,6 +75,7 @@ UMI_LENS=12
 SPACER=TRUE
 SPACER_SEQ=ATGGGAAAGAGTGTCC
 UMI_POS=1
+UMI_INLINE=TRUE
 
 [SIMSENSEQ-SE]
 INPUT_READS=1
@@ -77,6 +85,7 @@ UMI_LENS=12
 SPACER=TRUE
 SPACER_SEQ=ATGGGAAAGAGTGTCC
 UMI_POS=1
+UMI_INLINE=TRUE
 
 [CUSTOM]
 # enter the number of input fastqs
@@ -96,5 +105,6 @@ SPACER_SEQ=0
 # enter the position 1-based of the umi in read
 # a single value or comma-separated list
 UMI_POS=0
-
+# enter TRUE (umi inline with read) or FALSE (umi in separate fastq)
+UMI_INLINE=TRUE
 
