updated required modules

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
 setuptools>=1.1
-numpy>=1.7
-pandas>=0.12.0
-pysam>=0.8.4
-
+numpy>=1.14.2
+pandas>=0.22.0
+pysam>=0.14.1
+argparse>=1.1
+json>=2.0.9
+yaml>=5.1.1
+matplotlib>=3.1.2
+mistune>=0.8.4
+networkx>=1.11
+pygal>=2.4.0
+scipy>=1.0.1
+seaborn>=0.9.0
+configparser>=3.5.0
